update main page

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ document.write('<p><font color="gray" size="1">Photo credit: '+theCredits[whichI
 
         </p>
         <p>
-            I am a first year PhD student in Information engineering, jointly supervised by <a href="https://laspucl2016.wpcomstaging.com/team/laura-toni/" target="_blank">Dr. Laura Toni</a> at University College London and <a href="https://web.media.mit.edu/~xdong/" target="_blank">Dr. Xiaowen Dong</a> at the Univ. of Oxford.
+            I'm a first year PhD student in Information engineering and Machine Learning, jointly supervised by <a href="https://laspucl2016.wpcomstaging.com/team/laura-toni/" target="_blank">Dr. Laura Toni</a> at University College London and <a href="https://web.media.mit.edu/~xdong/" target="_blank">Dr. Xiaowen Dong</a> at the Univ. of Oxford.
         </p>
         <p>
             Before that, I obtained my MSc in Data Science at UCL, advised by <a href="https://neuralnoise.com/" target="_blank">Dr. Pasquale Minervini</a>, and BEng in Ocean Engineering and Technology at Zhejiang University.
