updated main page

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ document.write('<p><font color="gray" size="1">Photo credit: '+theCredits[whichI
         </span>
         </div>
         <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-            <p> Our Paper on&nbsp;<a href="https://garyball.github.io/On_Regularising_Neural_Link_Predictors.pdf" target="https://garyball.github.io/On_Regularising_Neural_Link_Predictors.pdf">A systematic analysis of regularising terms for Neural Link Prediction Models</a> was submitted to&nbsp;<a href="https://logconference.org/" target="https://logconference.org/">Learning on Graphs conference 2022 </a> .</p>
+            <p> Our Paper on&nbsp;<a href="https://garyball.github.io/On_Regularising_Neural_Link_Predictors.pdf" target="https://garyball.github.io/On_Regularising_Neural_Link_Predictors.pdf">A Systematic Analysis of Regularising Terms for Neural Link Prediction Models</a> was submitted to&nbsp;<a href="https://logconference.org/" target="https://logconference.org/">Learning on Graphs conference 2022 </a> .</p>
         </div>
     </div>
 
