updated main page

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@ document.write('<p><font color="gray" size="1">Photo credit: '+theCredits[whichI
         </span>
         </div>
         <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-            <p> Every year <a href="https://laspucl2016.wpcomstaging.com/" target="_blank">UCL LASP</a> provides a list of MSc projects to students. If you are currently enrolled in any of the MSc programmes at UCL EEE (e.g. MSc Integrated Machine Learning Systems),
+            <p> Every year <a href="https://laspucl2016.wpcomstaging.com/" target="_blank">UCL LASP</a> provides a list of MSc projects to students.
+                If you are currently enrolled in any of the MSc programmes at UCL CS/Stats (MSc in Machine Learning, CSML, DSML, CS, DS) or EEE (e.g. MSc Integrated Machine Learning Systems),
                 and are interested in working with us, please feel free to have a look at the project proposals in <a href="/assets/pdf/MSc_projects_proposal.pdf" target="/assets/pdf/MSc_projects_proposal.pdf">pdf form</a> or
                 <a href="\teaching" target="/teaching">html form</a>
                  and get contact! &nbsp; </a> .</p>
