updated small things

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ document.write('<p><font color="gray" size="1">Photo credit: '+theCredits[whichI
 
         </p>
         <p>
-            I'm a first year PhD student in Information engineering and Machine Learning, jointly supervised by <a href="https://laspucl2016.wpcomstaging.com/team/laura-toni/" target="_blank">Dr. Laura Toni</a> at University College London and <a href="https://web.media.mit.edu/~xdong/" target="_blank">Dr. Xiaowen Dong</a> at the Univ. of Oxford.
+            I'm a first year PhD student in Information engineering and Machine Learning, jointly supervised by <a href="https://laspucl2016.wpcomstaging.com/team/laura-toni/" target="_blank">Dr. Laura Toni</a> at University College London and <a href="https://web.media.mit.edu/~xdong/" target="_blank">Dr. Xiaowen Dong</a> at University of Oxford.
         </p>
         <p>
             Before that, I obtained my MSc in Data Science at UCL, advised by <a href="https://neuralnoise.com/" target="_blank">Dr. Pasquale Minervini</a> at <a href="https://nlp.cs.ucl.ac.uk/" target="_blank">UCL NLP</a>,
