--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@ document.write('<p><font color="gray" size="1">Photo credit: '+theCredits[whichI
 
         </p>
         <p>
-            I would like to give my special thanks to UCL faculty of engineering, UKRI EPSRC, and the China Scholarship Council for generously supporting my research.
-            </p>
+            I would like to give my special thanks to UCL faculty of engineering and UKRI EPSRC for generously supporting my research.
+            </p>    
 
         
     </div>
