--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ document.write('<p><font color="gray" size="1">Photo credit: '+theCredits[whichI
         </p>
         <p>
             Before that, I obtained my MSc in Data Science at UCL, advised by <a href="https://neuralnoise.com/" target="_blank">Dr. Pasquale Minervini</a> at <a href="https://nlp.cs.ucl.ac.uk/" target="_blank">UCL NLP</a>,
-            and BEng in Ocean Engineering and Technology at Zhejiang University.
+            and BEng in Ocean Engineering and Technology (Information Engineering track) at Zhejiang University.
         </p>
         <p>
             My research interest lies in the general world of Graph Machine Learning, which includes, Graph Signal Processing, Graph Representation Learning and Knowledge Graphs
