--- a/cv/index.html
+++ b/cv/index.html
@@ -225,7 +225,7 @@
 
 							<div class="col-xs-10 cl-sm-10 col-md mt-2 mt-md-0">
 
-								<h6 class="title font-weight-bold ml-1 ml-md-4">Zhejiang University – BEng in Ocearn Engineering and Technology</h6>
+								<h6 class="title font-weight-bold ml-1 ml-md-4">Zhejiang University – BEng in Ocean Engineering and Technology (Information Engineering Track)</h6>
 
 
 								<ul class="items">
