--- a/jail/index.html
+++ b/jail/index.html
@@ -108,37 +108,17 @@
   <!-- Content -->
   <div class="content">
     
-  <h1>Welcome to JAIL!</h1>
-  <h6>Group website for Jiang AI Lab (JAIL)</h6>
+  <h1>Welcome to the JAIL!</h1>
+  <h6>Jiang AI Lab (JAIL)</h6>
 
     <h3 class="mt-4">Ambition</h3>
 
-We are a group of research scattered across multiple departments in both University College London and University of Oxford. Our research focuses on Neural Noise Models, Graph Machine Forgetting, and small (but useless) Language Models. And they do not have any promising applications.
+We are a group of research scattered across multiple departments in both University College London (UCL) and the University of Oxford. Our research focuses on Neural Noise Models, Graph Machine Forgetting, and small (but useless) Language Models. And they do not have any promising applications.
 <h3 class="mt-4">Group Members</h3>
 
-<div class="card mt-3">
-  <div class="p-3">
-    <div class="row">
-      <div class="col-sm-10">
-        <h5 class="font-weight-bold">GSP 2023</h5>
-      </div>
-      <div class="col-sm-2 text-left text-sm-right">
-        <a class="badge font-weight-bold light-blue darken-1 align-middle" href="https://gspworkshop.org/" target="_blank">
-            GSP 2023
-        </a>
-      </div>
-    </div>
-    <h6 class="font-italic mt-2 mt-sm-0">2022-present: Local Organizing Team</h6>
-    <ul class="card-text font-weight-light list-group list-group-flush">
-      <p>
-      I am in the local organizing team for the <a href="https://gspworkshop.org/" target="_blank">Graph Signal Processing Workshop 2023
-      </a> at the Univ. of Oxford. The workshop will provide a warm welcome to experts and practitioners from academia and industry in the field of graph signal processing (GSP). The goal of GSP is to generalize classical signal processing and statistical learning tools to signals on graphs (functions defined on a graph). The workshop will invite discussion on theoretical and foundational topics related to GSP, including graph transforms, sampling theorems, and filter design. The workshop will also highlight how such tools can be integrated into a learning framework, and show novel theoretical developments at the intersection of graph signal processing and graph machine learning. Examples of applications that will be showcased in the workshop include gene expression patterns defined on top of gene networks, the spread of epidemics over a social network, the congestion level at the nodes of a telecommunication network, and patterns of brain activity defined on top of a brain network.
-      </p>
-    </ul>
-  </div>
-</div>
-
-
+    &#x2022; <a href="https://garyball.github.io/" target="_blank">Keyue Jiang</a> (Department of Electronic and Electrical Engineering, Unviersity College London)
+    &#x2022; <a href="https://scholar.google.com/citations?user=dpcw8ckAAAAJ&hl=en" target="_blank">Bohan Tang</a> (Department of Engineering, Unviersity of Oxford)
+    &#x2022; <a href="https://www.education.ox.ac.uk/people/yaoyao-ruan/" target="_blank">Yaoyao Ruan</a> (Department of Education, Unviersity of Oxford)
 
 
   </div>
