--- a/jail/index.html
+++ b/jail/index.html
@@ -113,7 +113,7 @@
 
     <h3 class="mt-4">Ambition</h3>
 
-We are a group of research scattered across multiple departments in both University College London (UCL) and the University of Oxford. Our research focuses on Neural Noise Models, Graph Machine Forgetting, and small (but useless) Language Models. And they do not have any promising applications.
+We are a group of research scattered across multiple departments in both University College London (UCL) and the University of Oxford. Our research focuses on Neural Noise Models, Machine Forgetting on Graphs, and small (but useless) Language Models. And (un)fortunately, they do not have any promising applications.
 <h3 class="mt-4">Group Members</h3>
 
     &#x2022; <a href="https://garyball.github.io/" target="_blank">Keyue Jiang</a> (Department of Electronic and Electrical Engineering, Unviersity College London)
