--- a/jail/index.html
+++ b/jail/index.html
@@ -108,16 +108,20 @@
   <!-- Content -->
   <div class="content">
     
-  <h1>Welcome to the JAIL!</h1>
-  <h6>Jiang AI Lab (JAIL)</h6>
+  <h1>JAIL: Jiang AI Lab</h1>
+  <h6>Welcome to the JAIL!</h6>
 
     <h3 class="mt-4">Ambition</h3>
 
-We are a group of research scattered across multiple departments in both University College London (UCL) and the University of Oxford. Our research focuses on Neural Noise Models, Machine Forgetting on Graphs, and small (but useless) Language Models. And (un)fortunately, they do not have any promising applications.
+We are a group of researchers scattered across multiple departments in both University College London (UCL) and the University of Oxford. Our research focuses on Neural Noise Models, Machine Forgetting on Graphs, and small (but useless) Language Models. And (un)fortunately, they do not have any promising applications.
 <h3 class="mt-4">Group Members</h3>
 
     &#x2022; <a href="https://garyball.github.io/" target="_blank">Keyue Jiang</a> (Department of Electronic and Electrical Engineering, Unviersity College London)
+
+
     &#x2022; <a href="https://scholar.google.com/citations?user=dpcw8ckAAAAJ&hl=en" target="_blank">Bohan Tang</a> (Department of Engineering, Unviersity of Oxford)
+
+
     &#x2022; <a href="https://www.education.ox.ac.uk/people/yaoyao-ruan/" target="_blank">Yaoyao Ruan</a> (Department of Education, Unviersity of Oxford)
 
 
