--- a/jail/index.html
+++ b/jail/index.html
@@ -113,12 +113,12 @@
 
     <h3 class="mt-4">Ambition</h3>
 
-Huge congratulations that you found a hidden treasure! We are a group of researchers scattered across multiple departments in both University College London (UCL) and the University of Oxford. Our research focuses on Neural Noise Models, Machine Forgetting on Graphs, and small (but useless) Language Models. And (un)fortunately, they do not have any promising applications.
+Huge congratulations that you found a hidden treasure! We are a group of researchers scattered across UCL and Oxford. Our research focuses on Neural Noise Models, Machine Sleeping on Graphs, and small (but useless) Language Models. And (un)fortunately, they do not have any promising applications.
 <h3 class="mt-4">Group Members</h3>
 
-    &#x2022; <a href="https://garyball.github.io/" target="_blank">Keyue Jiang</a> (Department of Electronic and Electrical Engineering, Unviersity College London) <br>
-    &#x2022; <a href="https://scholar.google.com/citations?user=dpcw8ckAAAAJ&hl=en" target="_blank">Bohan Tang</a> (Department of Engineering, Unviersity of Oxford) <br>
-    &#x2022; <a href="https://www.education.ox.ac.uk/people/yaoyao-ruan/" target="_blank">Yaoyao Ruan</a> (Department of Education, Unviersity of Oxford)<br>
+    &#x2022; <a href="https://garyball.github.io/" target="_blank">Keyue Jiang</a> (Unviersity College London) <br>
+    &#x2022; <a href="https://scholar.google.com/citations?user=dpcw8ckAAAAJ&hl=en" target="_blank">Bohan Tang</a> (Unviersity of Oxford) <br>
+    &#x2022; <a href="https://www.education.ox.ac.uk/people/yaoyao-ruan/" target="_blank">Yaoyao Ruan</a> (Unviersity of Oxford)<br>
 
 
     <h3 class="mt-4">Consider Joining us?... !</h3>
