--- a/jail/index.html
+++ b/jail/index.html
@@ -113,7 +113,7 @@
 
     <h3 class="mt-4">Ambition</h3>
 
-Huge congratulations that you found a hidden treasure! We are a group of researchers scattered across UCL and Oxford. Our research focuses on Neural Noise Models, Machine Sleeping on Graphs, and small (but useless) Language Models. And (un)fortunately, they do not have any promising applications.
+Huge congratulations that you found a hidden treasure! We are a group of researchers scattered across UCL and Oxford. Our research focuses on Neural Noise Models, Machine Sleeping on Graphs, and small (but useless) Language Models for education. And (un)fortunately, they do not have any promising applications.
 <h3 class="mt-4">Group Members</h3>
 
     &#x2022; <a href="https://garyball.github.io/" target="_blank">Keyue Jiang</a> <br>
