--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ document.write('<p><font color="gray" size="1">Photo credit: '+theCredits[whichI
         <div class="row ml-1 ml-sm-0">
           <span class="contact-icon text-center" style="line-height: 1em;">
             <a href="mailto:keyue.jiang.18@ucl.ac.uk"><i class="fa fa-envelope-square gm-icon"></i></a>
-            <a href="" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square gs-icon"></i></a>
+            <a href="https://scholar.google.com/citations?hl=en&user=cZJ-ZAkAAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square gs-icon"></i></a>
             <a href="https://github.com/GaryBall" target="_blank" title="GitHub"><i class="fab fa-github-square gh-icon"></i></a>
             <a href="https://www.linkedin.com/in/keyue-jiang-6946881a0/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin li-icon"></i></a>
             <a href="/" target="_blank" title="Facebook"><i class="fab fa-facebook-square fb-icon"></i></a>
@@ -164,16 +164,15 @@ document.write('<p><font color="gray" size="1">Photo credit: '+theCredits[whichI
             I'm a PhD student in Information Engineering and Machine Learning, jointly supervised by <a href="https://laspucl2016.wpcomstaging.com/team/laura-toni/" target="_blank">Dr. Laura Toni</a> at University College London and <a href="https://web.media.mit.edu/~xdong/" target="_blank">Dr. Xiaowen Dong</a> at the University of Oxford.
         </p>
         <p>
+            I am also currently a research intern at <a href="https://www.alibabacloud.com/en?_p_lc=1" target="_blank">Alibaba Cloud</a>, working on accelerating diffusion/flow based video generative models.
+        </p>
+        <p>
             Before that, I obtained my MSc in Data Science at UCL, advised by <a href="https://neuralnoise.com/" target="_blank">Dr. Pasquale Minervini</a> at <a href="https://nlp.cs.ucl.ac.uk/" target="_blank">UCL NLP</a>,
             and BEng in Ocean Engineering and Technology (Information Engineering track) at Zhejiang University.
         </p>
         <p>
-            My research interest lies in the general world of Graph Machine Learning, which includes, Graph Signal Processing, Graph Representation Learning and Knowledge Graphs
-
+            I am mainly passionate about statistical machine learning theory for generative models (Flow/Diffusion Models) from the perspective of statistical physics. My current focus is developing geometric generative models for graph-structured data (such as molecules, and drugs) and 3D data (such as 3D point cloud and proteins). The applications include but are not limited to AI for Sciences (e.g. material/drug design, medical image analysis, and forecasting), content generation (3D generation and speech generation), and recommendation systems.
         </p>
-        <p>
-            I would like to give my special thanks to UCL faculty of engineering and UKRI EPSRC for generously supporting my research.
-            </p>
 
         
     </div>
@@ -183,6 +182,18 @@ document.write('<p><font color="gray" size="1">Photo credit: '+theCredits[whichI
 <!-- News -->
 <div class="news mt-3 p-0">
   <h1 class="title mb-4 p-0">news</h1>
+
+    <div class="row p-0">
+        <div class="col-sm-2 p-0">
+        <span class="badge light-blue darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Aug. 10, 2025
+        </span>
+        </div>
+        <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+            <p> I am very lazy in updating news so please kindly refer to my  <a href="https://scholar.google.com/citations?hl=en&user=cZJ-ZAkAAAAJ" target="_blank">google scholar</a> if
+            you wish to know more about my research:) </p>
+        </div>
+    </div>
 
     <div class="row p-0">
         <div class="col-sm-2 p-0">
@@ -224,16 +235,6 @@ document.write('<p><font color="gray" size="1">Photo credit: '+theCredits[whichI
         </div>
     </div>
 
-  <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-blue darken-1 font-weight-bold text-uppercase align-middle date ml-3">
-          Jan 14, 2022
-        </span>
-      </div>
-      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p> Website up!</p>
-      </div>
-    </div>
 
 
 
